--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 # VITE_BASE_URL= https://nice-teal-crayfish-boot.cyclic.app
-VITE_BASE_URL= http://localhost:4000
+VITE_BASE_URL= https://wild-teal-squid-cape.cyclic.app
