--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 # VITE_BASE_URL= https://nice-teal-crayfish-boot.cyclic.app
-# VITE_BASE_URL= https://wild-teal-squid-cape.cyclic.app
-VITE_BASE_URL= http://localhost:4000
+VITE_BASE_URL= https://wild-teal-squid-cape.cyclic.app
+# VITE_BASE_URL= http://localhost:4000
 
