--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 
 # VITE_BASE_URL= https://nice-teal-crayfish-boot.cyclic.app
 
-VITE_BASE_URL= https://important-worm-housecoat.cyclic.app
+# VITE_BASE_URL= https://important-worm-housecoat.cyclic.app
+VITE_BASE_URL= https://smoggy-bull-bell-bottoms.cyclic.app
 # VITE_BASE_URL= http://localhost:4000
 
